SYS-533 OAuth2 authentication
